# nwnsc

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.txt  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: ccpp.yml  release.yml
_NscLib/: .gitignore  CMakeLists.txt  Nsc.h  NscCodeGenerator.cpp  NscCodeGenerator.h  NscCompat.h  NscCompiler.cpp  NscContext.cpp  NscContext.h  NscDecompiler.cpp  NscIntrinsicDefs.h  NscPCodeEnumerator.cpp  NscPCodeEnumerator.h  NscPStackEntry.cpp  NscPStackEntry.h  NscParser.ypp  NscParserRoutines.cpp  NscSymbolTable.h  NwnArray.h  NwnDefines.cpp  NwnDefines.h  NwnDoubleLinkList.h  NwnLoader.cpp  NwnLoader.h  NwnStreams.h  Precomp.h
_NwnBaseLib/: BaseConstants.h  BaseTypes.cpp  BaseTypes.h  CMakeLists.txt  ModelSystem.h  NWNBaseLib.h
_NwnDataLib/: BifFileReader.cpp  BifFileReader.h  CMakeLists.txt  FileWrapper.h  KeyFileReader.cpp  KeyFileReader.h  NWNDataLib.h  NWScriptReader.cpp  NWScriptReader.h  Precomp.h  ResourceAccessor.h  ResourceManager.cpp  ResourceManager.h  TextOut.h
_NwnUtilLib/: BufferParser.cpp  BufferParser.h  CMakeLists.txt  JSONValue.cpp  JSONValue.h  NWNUtilLib.h  OsCompat.cpp  OsCompat.h  Precomp.h  ProjGlobalDefs.h  Ref.h  VersionConstants.h  easylogging++.cc  findfirst.cpp  findfirst.h  spec.cpp  spec.h  version.cpp  version.h
cmake/modules/: GetGitRevisionDescription.cmake  version.cpp.in
extras/: Makefile
hooks/: post_push
nwnsc/: .gitignore  CMakeLists.txt  nwnsc.cpp
scripts/: buildnwnsc.sh  run-linux-build.sh
