add_library(nwndatalib
        BifFileReader.cpp
        BifFileReader.h
        FileWrapper.h
        KeyFileReader.cpp
        KeyFileReader.h
        NWNDataLib.h
        NWScriptReader.cpp
        NWScriptReader.h
        Precomp.h
        ResourceAccessor.h
        ResourceManager.cpp
        ResourceManager.h
        TextOut.h
)