add_library(nwnutillib
        BufferParser.cpp
        BufferParser.h
        easylogging++.cc
        easylogging++.h
        findfirst.cpp
        findfirst.h
        JSON.cpp
        JSON.h
        JSONValue.cpp
        JSONValue.h
        NWNUtilLib.h
        optionparser.h
        OsCompat.cpp
        OsCompat.h
        Precomp.h
        ProjGlobalDefs.h
        Ref.h
        spec.cpp
        spec.h
        version.cpp
        version.h
        VersionConstants.h
)